Task 4 - Add Reference to Category

--- a/Web/Views/Members/List.cshtml
+++ b/Web/Views/Members/List.cshtml
@@ -22,6 +22,7 @@
                 <th scope="row">@member.Id</th>
                 <td>@member.Name</td>
                 <td>@member.Email</td>
+                <td>@Html.DisplayFor(modelItem => member.Category.Name)</td>
                 <td>@Html.ActionLink("Edit", "Edit", new { id = member.Id }) </td>
             </tr>
         }
